--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    tools:context=".FirstActivity">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".FirstActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -22,13 +30,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="2"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="2"
                 android:text="작물유형 선택"
-                android:textSize="16sp"
-                android:textColor="@color/black" />
+                android:textStyle="bold"
+                android:textColor="#FF9800"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -39,7 +48,8 @@
                 android:layout_marginRight="10dp"
                 android:text="작물선택"
                 android:textSize="16sp"
-                android:textColor="@color/black" />
+                android:textStyle="bold"
+                android:textColor="#FF9800"/>
 
         </LinearLayout>
 
@@ -70,58 +80,78 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
+        android:orientation="horizontal"
         android:layout_weight="0.8">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
             android:src="@drawable/fertilizer" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="  1. 비료를 얼마나 주셨습니까?"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text=""/>
+                android:layout_gravity="center"
+                android:text="  1. 투입된 비료 양"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
-            <EditText
-                android:id="@+id/edtFertWeight"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:maxLength="10"
-                android:layout_weight="0.8" />
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text=" Kg"
-                android:textSize="22sp" />
+                <EditText
+                    android:id="@+id/edtFertWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:maxLength="10"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kg"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.4">
+
+
+
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="vertical">
+
+
 
         <TextView
             android:layout_width="match_parent"
@@ -321,9 +351,13 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="50dp"
-            android:text="계산" />
+            android:text="계산"
+            app:backgroundTint="#FF9800" />
 
 
     </LinearLayout>
 
 </LinearLayout>
+
+
+</ScrollView>
